--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.application.name=demo
 spring.devtools.restart.enabled=true
 spring.devtools.livereload.enabled=true
 
+spring.datasource.generate-unique-name=false
+spring.datasource.name=testdb
